Actions
Bug #10726
closedelfexec: NULL pointer errors
Start date:
2019-04-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/exec/elf/elf.c: In function 'mapexec_brand': ../../common/exec/elf/elf.c:232:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *lddatap = NULL; ^ ../../common/exec/elf/elf.c: In function 'elfexec': ../../common/exec/elf/elf.c:923:22: error: comparison between pointer and integer [-Werror] if (args->commpage != NULL || ^~ ../../common/exec/elf/elf.c:924:55: error: comparison between pointer and integer [-Werror] (args->commpage = (uintptr_t)comm_page_mapin()) != NULL) { ^~ In file included from ../../common/sys/param.h:48:0, from ../../common/exec/elf/elf.c:33: ../../common/exec/elf/elf.c: In function 'elfcore': ../../common/sys/null.h:32:14: error: passing argument 6 of 'process_scns' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/exec/elf/elf.c:1951:54: note: in expansion of macro 'NULL' (void) process_scns(content, p, credp, NULL, NULL, NULL, 0, ^~~~ ../../common/exec/elf/elf.c:1626:1: note: expected 'int' but argument is of type 'void *' process_scns(core_content_t content, proc_t *p, cred_t *credp, vnode_t *vp, ^~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 995a963f85d39c82ddd55378042f53b3a58c2519
commit 995a963f85d39c82ddd55378042f53b3a58c2519 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-22T20:27:17.000Z 10726 elfexec: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions