usr/src/uts/common/exec/elf/elf.c
@@ -229,7 +229,7 @@ mapexec_brand(vnode_t *vp, uarg_t *args, Ehdr *ehdr, Addr *uphdr_vaddr,
 	intptr_t	minaddr;
 
 	if (lddatap != NULL)
-		*lddatap = NULL;
+		*lddatap = 0;
 
 	if (error = execpermissions(vp, &vat, args)) {
 		uprintf("%s: Cannot execute %s\n", exec_file, args->pathname);
@@ -928,8 +928,9 @@ elfexec(vnode_t *vp, execa_t *uap, uarg_t *args, intpdata_t *idatap,
 		 * take care of the FPU entries.
 		 */
 #if defined(__amd64)
-		if (args->commpage != NULL ||
-		    (args->commpage = (uintptr_t)comm_page_mapin()) != NULL) {
+		if (args->commpage != (uintptr_t)NULL ||
+		    (args->commpage = (uintptr_t)comm_page_mapin()) !=
+		    (uintptr_t)NULL) {
 			ADDAUX(aux, AT_SUN_COMMPAGE, args->commpage)
 		} else {
 			/*
@@ -1956,7 +1957,7 @@ top:
 	 */
 	nshdrs = 0;
 	if (content & (CC_CONTENT_CTF | CC_CONTENT_SYMTAB)) {
-		(void) process_scns(content, p, credp, NULL, NULL, NULL, 0,
+		(void) process_scns(content, p, credp, NULL, NULL, 0, 0,
 		    NULL, &nshdrs);
 	}
 	AS_LOCK_EXIT(as);
